--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </head>
 
   <body>
-    <h1>Daydot Helper v2</h1>
-    <h2>Maintained by Stormy O'Connor.<br>Costa Marine Point.</h2>
+    <p>Daydot Helper v2</p>
+    <p>Maintained by Stormy O'Connor.<br>Costa Marine Point.</p>
     <p>Please note that the list below may be outdated so check using the shelf life posters in-store.<br>E: me@imstormy.com</p>
     <div>
       <p>Start Date:</p>
