--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
@@ -53,303 +54,306 @@
     <hr>
     <div id="myDIV">
       <input class="button" type="text" id="myInput" placeholder="e.g. Mint Syrup" onkeyup="myFunction()">
-
-      <table id="myTable">
-        <tr class="header">
-          <th style="width:60%;">Product</th>
-          <th>Day Dot</th>
-        </tr>
-        <tr>
-          <td>Ham & Cheese Croissant</td>
-          <td>Up to 4 Hours when removed from fridge</td>
-        </tr>
-        <tr>
-          <td>Sausage Roll</td>
-          <td>Up to 4 Hours when removed from fridge</td>
-        </tr>
-        <tr>
-          <td>Muffins</td>
-          <td>24 Hours</td>
-        </tr>
-        <tr>
-          <td>Choc Chunk Cookie</td>
-          <td>24 Hours</td>
-        </tr>
-        <tr>
-          <td>Choc & Hazelnut Cookie</td>
-          <td>24 Hours</td>
-        </tr>
-        <tr>
-          <td>Cinnamon Bun</td>
-          <td>24 Hours</td>
-        </tr>
-        <tr>
-          <td>Cheese Scone</td>
-          <td>24 Hours</td>
-        </tr>
-        <tr>
-          <td>Cheese Twist</td>
-          <td>24 Hours</td>
-        </tr>
-        <tr>
-          <td>Choc & Caramel Bun</td>
-          <td>24 Hours</td>
-        </tr>
-        <tr>
-          <td>Vegan Fruited Teacake</td>
-          <td>24 Hours</td>
-        </tr>
-        <tr>
-          <td>Whipped Cream (Canister)</td>
-          <td>24 Hours</td>
-        </tr>
-        <tr>
-          <td>Belgian Bun</td>
-          <td>24 Hours</td>
-        </tr>
-        <tr>
-          <td>Penelope Polar Bear</td>
-          <td>2 Days</td>
-        </tr>
-        <tr>
-          <td>Crispy Chick Cake</td>
-          <td>2 Days</td>
-        </tr>
-        <tr>
-          <td>Whipped Cream (Open Bottle)</td>
-          <td>3 Days</td>
-        </tr>
-        <tr>
-          <td>Choc Chunk Shortbread</td>
-          <td>3 Days</td>
-        </tr>
-        <tr>
-          <td>Clementine & Mascarpone Loaf Cake</td>
-          <td>4 Days</td>
-        </tr>
-        <tr>
-          <td>Lemon Drizzle</td>
-          <td>4 Days</td>
-        </tr>
-        <tr>
-          <td>Banana Loaf Cake</td>
-          <td>4 Days</td>
-        </tr>
-        <tr>
-          <td>Aria Lactofree Semi-Skimmed</td>
-          <td>4 Days</td>
-        </tr>
-        <tr>
-          <td>Choc & Honeycomb Trillionaires</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Cornflake Nest</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Yule Log</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Vegan Rocky Road</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Black & White Wreath Cake</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Millionaires Shortbread</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Chocolate Tiffin</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Lemon Tart</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Carrot Cake</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Seriously Chocolate Cake</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Bakewell Tart</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Caramel Crisp</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Chocolate Brownie</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Raspberry & Almond Bake</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Lemonade</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Fruit Cooler Base (Refrigerated)</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>All Alpro Dairy Alternatives</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Spiced Apple Base (Chilled)</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Mini Gingerbread Man</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Prepared Cold Brew (Refrigerated)</td>
-          <td>5 Days</td>
-        </tr>
-        <tr>
-          <td>Nutty Granola</td>
-          <td>8 Days</td>
-        </tr>
-        <tr>
-          <td>Lemon Slices</td>
-          <td>4 Weeks</td>
-        </tr>
-        <tr>
-          <td>Crispy Truffle Crumbs</td>
-          <td>2 Weeks</td>
-        </tr>
-        <tr>
-          <td>Strawberry Sprinkles</td>
-          <td>4 Weeks</td>
-        </tr>
-        <tr>
-          <td>Caramel Vermicelli Pieces</td>
-          <td>4 Weeks</td>
-        </tr>
-        <tr>
-          <td>Mint Syrup</td>
-          <td>4 Weeks</td>
-        </tr>
-        <tr>
-          <td>Bonfire Spice Syrup</td>
-          <td>4 Weeks</td>
-        </tr>
-        <tr>
-          <td>Hot Chocolate Powder</td>
-          <td>4 Weeks</td>
-        </tr>
-        <tr>
-          <td>Chocolate Chip Pieces</td>
-          <td>4 Weeks</td>
-        </tr>
-        <tr>
-          <td>Ruby Hot Chocolate Powder</td>
-          <td>4 Weeks</td>
-        </tr>
-        <tr>
-          <td>Red Shimmer Chocolate Curls</td>
-          <td>4 Weeks</td>
-        </tr>
-        <tr>
-          <td>Gold Milk Chocolate Wafer Pieces</td>
-          <td>28 Days</td>
-        </tr>
-        <tr>
-          <td>Honeycomb Syrup</td>
-          <td>30 Days</td>
-        </tr>
-        <tr>
-          <td>Cappuccino Dusting</td>
-          <td>1 Month</td>
-        </tr>
-        <tr>
-          <td>Golden Twinkle sprinkle</td>
-          <td>1 Month</td>
-        </tr>
-        <tr>
-          <td>Spiced Cappuccino Dusting</td>
-          <td>45 Days</td>
-        </tr>
-        <tr>
-          <td>All Syrup Flavours (Including Gomme)</td>
-          <td>3 Months</td>
-        </tr>
-        <tr>
-          <td>Christmas Teabag</td>
-          <td>3 Months</td>
-        </tr>
-        <tr>
-          <td>Gold White Chocolate Star</td>
-          <td>3 Months</td>
-        </tr>
-        <tr>
-          <td>Salted Caramel Sauce</td>
-          <td>12 Weeks</td>
-        </tr>
-        <tr>
-          <td>Belgian Chocolate Sauce</td>
-          <td>12 Weeks</td>
-        </tr>
-        <tr>
-          <td>Strawberry Sauce</td>
-          <td>12 Weeks</td>
-        </tr>
-        <tr>
-          <td>Cherry Sauce (2019)</td>
-          <td>12 Weeks</td>
-        </tr>
-        <tr>
-          <td>Peach Lemonade Sauce</td>
-          <td>12 Weeks</td>
-        </tr>
-        <tr>
-          <td>White Chocolate Sauce</td>
-          <td>12 Weeks</td>
-        </tr>
-        <tr>
-          <td>Spiced Chai Syrup</td>
-          <td>12 Weeks</td>
-        </tr>
-        <tr>
-          <td>Irish Coffee Flavour Sauce</td>
-          <td>12 Weeks</td>
-        </tr>
-        <tr>
-          <td>Frostino Base Powder</td>
-          <td>12 Weeks</td>
-        </tr>
-        <tr>
-          <td>Ground Cinnamon</td>
-          <td>6 Months</td>
-        </tr>
-        <tr>
-          <td>Marshmallows</td>
-          <td>End of life</td>
-        </tr>
-        <tr>
-          <td>Flakes</td>
-          <td>End of life</td>
-        </tr>
-        <tr>
-          <td>All Teabags</td>
-          <td>End of life</td>
-        </tr>
-      </table>
+      <div class="tableFixHead">
+        <table id="myTable">
+          <thead>
+            <tr class="header">
+              <th style="width:60%;">Product</th>
+              <th>Day Dot</th>
+            </tr>
+          </thead>
+          <tr>
+            <td>Ham & Cheese Croissant</td>
+            <td>Up to 4 Hours when removed from fridge</td>
+          </tr>
+          <tr>
+            <td>Sausage Roll</td>
+            <td>Up to 4 Hours when removed from fridge</td>
+          </tr>
+          <tr>
+            <td>Muffins</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Choc Chunk Cookie</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Choc & Hazelnut Cookie</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Cinnamon Bun</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Cheese Scone</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Cheese Twist</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Choc & Caramel Bun</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Vegan Fruited Teacake</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Whipped Cream (Canister)</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Belgian Bun</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Penelope Polar Bear</td>
+            <td>2 Days</td>
+          </tr>
+          <tr>
+            <td>Crispy Chick Cake</td>
+            <td>2 Days</td>
+          </tr>
+          <tr>
+            <td>Whipped Cream (Open Bottle)</td>
+            <td>3 Days</td>
+          </tr>
+          <tr>
+            <td>Choc Chunk Shortbread</td>
+            <td>3 Days</td>
+          </tr>
+          <tr>
+            <td>Clementine & Mascarpone Loaf Cake</td>
+            <td>4 Days</td>
+          </tr>
+          <tr>
+            <td>Lemon Drizzle</td>
+            <td>4 Days</td>
+          </tr>
+          <tr>
+            <td>Banana Loaf Cake</td>
+            <td>4 Days</td>
+          </tr>
+          <tr>
+            <td>Aria Lactofree Semi-Skimmed</td>
+            <td>4 Days</td>
+          </tr>
+          <tr>
+            <td>Choc & Honeycomb Trillionaires</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Cornflake Nest</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Yule Log</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Vegan Rocky Road</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Black & White Wreath Cake</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Millionaires Shortbread</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Chocolate Tiffin</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Lemon Tart</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Carrot Cake</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Seriously Chocolate Cake</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Bakewell Tart</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Caramel Crisp</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Chocolate Brownie</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Raspberry & Almond Bake</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Lemonade</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Fruit Cooler Base (Refrigerated)</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>All Alpro Dairy Alternatives</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Spiced Apple Base (Chilled)</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Mini Gingerbread Man</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Prepared Cold Brew (Refrigerated)</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Nutty Granola</td>
+            <td>8 Days</td>
+          </tr>
+          <tr>
+            <td>Lemon Slices</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Crispy Truffle Crumbs</td>
+            <td>2 Weeks</td>
+          </tr>
+          <tr>
+            <td>Strawberry Sprinkles</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Caramel Vermicelli Pieces</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Mint Syrup</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Bonfire Spice Syrup</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Hot Chocolate Powder</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Chocolate Chip Pieces</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Ruby Hot Chocolate Powder</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Red Shimmer Chocolate Curls</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Gold Milk Chocolate Wafer Pieces</td>
+            <td>28 Days</td>
+          </tr>
+          <tr>
+            <td>Honeycomb Syrup</td>
+            <td>30 Days</td>
+          </tr>
+          <tr>
+            <td>Cappuccino Dusting</td>
+            <td>1 Month</td>
+          </tr>
+          <tr>
+            <td>Golden Twinkle sprinkle</td>
+            <td>1 Month</td>
+          </tr>
+          <tr>
+            <td>Spiced Cappuccino Dusting</td>
+            <td>45 Days</td>
+          </tr>
+          <tr>
+            <td>All Syrup Flavours (Including Gomme)</td>
+            <td>3 Months</td>
+          </tr>
+          <tr>
+            <td>Christmas Teabag</td>
+            <td>3 Months</td>
+          </tr>
+          <tr>
+            <td>Gold White Chocolate Star</td>
+            <td>3 Months</td>
+          </tr>
+          <tr>
+            <td>Salted Caramel Sauce</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Belgian Chocolate Sauce</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Strawberry Sauce</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Cherry Sauce (2019)</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Peach Lemonade Sauce</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>White Chocolate Sauce</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Spiced Chai Syrup</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Irish Coffee Flavour Sauce</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Frostino Base Powder</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Ground Cinnamon</td>
+            <td>6 Months</td>
+          </tr>
+          <tr>
+            <td>Marshmallows</td>
+            <td>End of life</td>
+          </tr>
+          <tr>
+            <td>Flakes</td>
+            <td>End of life</td>
+          </tr>
+          <tr>
+            <td>All Teabags</td>
+            <td>End of life</td>
+          </tr>
+        </table>
+      </div>
+      <hr>
     </div>
-    <hr>
   </body>
 
 </html>
