Added id tags to buttons
For google Tag Manager

--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
       <input class="button" name="setTomorrowBtn" type="button" id="today" onClick="setTomorrowDate()" value="Tomorrow" /> &nbsp;
       <input class="button" type="date" id="startDate" name="startDate" value="">
       <p>How many days until expiration:</p>
-      <input class="button" type="button" name="1dayBtn" value="3 days" onClick="setDays(3)" />
-      <input class="button" type="button" name="1dayBtn" value="4 days" onClick="setDays(4)" />
-      <input class="button" type="button" name="1dayBtn" value="5 days" onClick="setDays(5)" />
-      <input class="button" type="button" name="1dayBtn" value="7 days" onClick="setDays(7)" />
+      <input id="3days" class="button" type="button" name="1dayBtn" value="3 days" onClick="setDays(3)" />
+      <input id="4days" class="button" type="button" name="1dayBtn" value="4 days" onClick="setDays(4)" />
+      <input id="5days" class="button" type="button" name="1dayBtn" value="5 days" onClick="setDays(5)" />
+      <input id="7days" class="button" type="button" name="1dayBtn" value="7 days" onClick="setDays(7)" />
       <p></p>
-      <input class="button" type="button" name="1weekBtn" value="4 weeks" onClick="setWeeks(4)" />
+      <input id="4weeks" class="button" type="button" name="1weekBtn" value="4 weeks" onClick="setWeeks(4)" />
       <!--<input type="button" name="1dayBtn" value="30 days" onClick="setDays(30)"/>-->
-      <input class="button" type="button" name="1monthBtn" value="1 month" onClick="setMonths(1)" />
+      <input id="1month" class="button" type="button" name="1monthBtn" value="1 month" onClick="setMonths(1)" />
       <!--<input type="button" name="1dayBtn" value="45 days" onClick="setDays(45)"/>-->
-      <input class="button" type="button" name="1weekBtn" value="12 weeks" onClick="setWeeks(12)" />
-      <input class="button" type="button" name="1monthBtn" value="3 months" onClick="setMonths(3)" />
+      <input id="12weeks" class="button" type="button" name="1weekBtn" value="12 weeks" onClick="setWeeks(12)" />
+      <input id="3months" class="button" type="button" name="1monthBtn" value="3 months" onClick="setMonths(3)" />
       <p>Specific days/months until expiration:</p>
       <input class="button" id="dataVal" name="dataVal" type="number" placeholder="45">
       <input class="button" type="button" name="dataDayBtn" value="days" onClick="setFreeDays()" />
