--- a/index.html
+++ b/index.html
@@ -1,369 +1,60 @@
 <!doctype html>
 <html>
-
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="ico" sizes="16x16" href="images/favicon.ico">
-    <title>Daydot Helper</title>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/javascript.js"></script>
-    <script>
-      $(document).ready(function() {
-        document.getElementById("today").click();
-      });
-
-    </script>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PZPBPQ3');</script>
-    <!-- End Google Tag Manager -->
-  </head>
-
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PZPBPQ3"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <h1>Daydot Helper v2</h1>
-    <h2>Maintained by Stormy O'Connor.<br>Costa Marine Point.</h2>
-    <p>Please note that the list below may be outdated so check using the shelf life posters in-store.<br>E: me@imstormy.com</p>
-    <div>
-      <p>Start Date:</p>
-      <input class="button" name="setTodayBtn" type="button" id="today" onClick="setTodayDate()" value="Today" />
-      <input class="button" name="setTomorrowBtn" type="button" id="today" onClick="setTomorrowDate()" value="Tomorrow" /> &nbsp;
-      <input class="button" type="date" id="startDate" name="startDate" value="">
-      <p>How many days until expiration:</p>
-      <input id="3days" class="button" type="button" name="1dayBtn" value="3 days" onClick="setDays(3)" />
-      <input id="4days" class="button" type="button" name="1dayBtn" value="4 days" onClick="setDays(4)" />
-      <input id="5days" class="button" type="button" name="1dayBtn" value="5 days" onClick="setDays(5)" />
-      <input id="7days" class="button" type="button" name="1dayBtn" value="7 days" onClick="setDays(7)" />
-      <p></p>
-      <input id="4weeks" class="button" type="button" name="1weekBtn" value="4 weeks" onClick="setWeeks(4)" />
-      <!--<input type="button" name="1dayBtn" value="30 days" onClick="setDays(30)"/>-->
-      <input id="1month" class="button" type="button" name="1monthBtn" value="1 month" onClick="setMonths(1)" />
-      <!--<input type="button" name="1dayBtn" value="45 days" onClick="setDays(45)"/>-->
-      <input id="12weeks" class="button" type="button" name="1weekBtn" value="12 weeks" onClick="setWeeks(12)" />
-      <input id="3months" class="button" type="button" name="1monthBtn" value="3 months" onClick="setMonths(3)" />
-      <p>Specific days/months until expiration:</p>
-      <input class="button" id="dataVal" name="dataVal" type="number" placeholder="45">
-      <input class="button" type="button" name="dataDayBtn" value="days" onClick="setFreeDays()" />
-      <input class="button" type="button" name="dataWeekBtn" value="weeks" onClick="setFreeWeeks()" />
-      <input class="button" type="button" name="dataMonthBtn" value="months" onClick="setFreeMonths()" />
-    </div>
-
-    <div id="result"></div>
-
-    &nbsp;
-
-    <hr>
-    <div id="myDIV">
-      <input class="button" type="text" id="myInput" placeholder="e.g. Mint Syrup" onkeyup="myFunction()">
-      <div class="tableFixHead">
-        <table id="myTable">
-          <thead>
-            <tr class="header">
-              <th style="width:60%;">Product</th>
-              <th>Day Dot</th>
-            </tr>
-          </thead>
-          <tr>
-            <td>Ham & Cheese Croissant</td>
-            <td>Up to 4 Hours when removed from fridge</td>
-          </tr>
-          <tr>
-            <td>Sausage Roll</td>
-            <td>Up to 4 Hours when removed from fridge</td>
-          </tr>
-          <tr>
-            <td>Muffins</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Choc Chunk Cookie</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Choc & Hazelnut Cookie</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Cinnamon Bun</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Cheese Scone</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Cheese Twist</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Choc & Caramel Bun</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Vegan Fruited Teacake</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Whipped Cream (Canister)</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Belgian Bun</td>
-            <td>24 Hours</td>
-          </tr>
-          <tr>
-            <td>Penelope Polar Bear</td>
-            <td>2 Days</td>
-          </tr>
-          <tr>
-            <td>Crispy Chick Cake</td>
-            <td>2 Days</td>
-          </tr>
-          <tr>
-            <td>Whipped Cream (Open Bottle)</td>
-            <td>3 Days</td>
-          </tr>
-          <tr>
-            <td>Choc Chunk Shortbread</td>
-            <td>3 Days</td>
-          </tr>
-          <tr>
-            <td>Clementine & Mascarpone Loaf Cake</td>
-            <td>4 Days</td>
-          </tr>
-          <tr>
-            <td>Lemon Drizzle</td>
-            <td>4 Days</td>
-          </tr>
-          <tr>
-            <td>Banana Loaf Cake</td>
-            <td>4 Days</td>
-          </tr>
-          <tr>
-            <td>Aria Lactofree Semi-Skimmed</td>
-            <td>4 Days</td>
-          </tr>
-          <tr>
-            <td>Choc & Honeycomb Trillionaires</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Cornflake Nest</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Yule Log</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Vegan Rocky Road</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Black & White Wreath Cake</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Millionaires Shortbread</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Chocolate Tiffin</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Lemon Tart</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Carrot Cake</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Seriously Chocolate Cake</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Bakewell Tart</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Caramel Crisp</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Chocolate Brownie</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Raspberry & Almond Bake</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Lemonade</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Fruit Cooler Base (Refrigerated)</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>All Alpro Dairy Alternatives</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Spiced Apple Base (Chilled)</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Mini Gingerbread Man</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Prepared Cold Brew (Refrigerated)</td>
-            <td>5 Days</td>
-          </tr>
-          <tr>
-            <td>Nutty Granola</td>
-            <td>8 Days</td>
-          </tr>
-          <tr>
-            <td>Lemon Slices</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Crispy Truffle Crumbs</td>
-            <td>2 Weeks</td>
-          </tr>
-          <tr>
-            <td>Strawberry Sprinkles</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Caramel Vermicelli Pieces</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Mint Syrup</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Bonfire Spice Syrup</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Hot Chocolate Powder</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Chocolate Chip Pieces</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Ruby Hot Chocolate Powder</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Red Shimmer Chocolate Curls</td>
-            <td>4 Weeks</td>
-          </tr>
-          <tr>
-            <td>Gold Milk Chocolate Wafer Pieces</td>
-            <td>28 Days</td>
-          </tr>
-          <tr>
-            <td>Honeycomb Syrup</td>
-            <td>30 Days</td>
-          </tr>
-          <tr>
-            <td>Cappuccino Dusting</td>
-            <td>1 Month</td>
-          </tr>
-          <tr>
-            <td>Golden Twinkle sprinkle</td>
-            <td>1 Month</td>
-          </tr>
-          <tr>
-            <td>Spiced Cappuccino Dusting</td>
-            <td>45 Days</td>
-          </tr>
-          <tr>
-            <td>All Syrup Flavours (Including Gomme)</td>
-            <td>3 Months</td>
-          </tr>
-          <tr>
-            <td>Christmas Teabag</td>
-            <td>3 Months</td>
-          </tr>
-          <tr>
-            <td>Gold White Chocolate Star</td>
-            <td>3 Months</td>
-          </tr>
-          <tr>
-            <td>Salted Caramel Sauce</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Belgian Chocolate Sauce</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Strawberry Sauce</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Cherry Sauce (2019)</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Peach Lemonade Sauce</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>White Chocolate Sauce</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Spiced Chai Syrup</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Irish Coffee Flavour Sauce</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Frostino Base Powder</td>
-            <td>12 Weeks</td>
-          </tr>
-          <tr>
-            <td>Ground Cinnamon</td>
-            <td>6 Months</td>
-          </tr>
-          <tr>
-            <td>Marshmallows</td>
-            <td>End of life</td>
-          </tr>
-          <tr>
-            <td>Flakes</td>
-            <td>End of life</td>
-          </tr>
-          <tr>
-            <td>All Teabags</td>
-            <td>End of life</td>
-          </tr>
-        </table>
-      </div>
-      <hr>
-    </div>
-  </body>
-
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
+		<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+		<link rel="icon" type="ico" sizes="16x16" href="images/favicon.ico">
+		<title>Daydot Helper</title>
+		<link href="css/styles.css" rel="stylesheet" type="text/css">
+		<script src="js/jquery-3.4.1.min.js"></script>
+		<script src="js/javascript.js"></script>
+		<script>
+			$(document).ready(function() {
+				document.getElementById("today").click();
+			});
+			
+		</script>
+	</head>
+	<body>
+		<center>
+			<h1>Daydot Helper</h1>
+			<p>By <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy</a></p>
+			<hr>
+			<div>
+				<p>Start Date:</p>
+				<input class="button" name="setTodayBtn" type="button" id="today" onClick="setTodayDate()" value="Today" />
+				<input class="button" name="setTomorrowBtn" type="button" id="today" onClick="setTomorrowDate()" value="Tomorrow" /> &nbsp;
+				<input class="button" type="date" id="startDate" name="startDate" value="">
+				<p>How many days until expiration:</p>
+				<input id="3days" class="button" type="button" name="1dayBtn" value="3 days" onClick="setDays(3)" />
+				<input id="4days" class="button" type="button" name="1dayBtn" value="4 days" onClick="setDays(4)" />
+				<input id="5days" class="button" type="button" name="1dayBtn" value="5 days" onClick="setDays(5)" />
+				<input id="7days" class="button" type="button" name="1dayBtn" value="7 days" onClick="setDays(7)" />
+				<p></p>
+				<input id="4weeks" class="button" type="button" name="1weekBtn" value="4 weeks" onClick="setWeeks(4)" />
+				<!--<input type="button" name="1dayBtn" value="30 days" onClick="setDays(30)"/>-->
+				<input id="1month" class="button" type="button" name="1monthBtn" value="1 month" onClick="setMonths(1)" />
+				<!--<input type="button" name="1dayBtn" value="45 days" onClick="setDays(45)"/>-->
+				<input id="12weeks" class="button" type="button" name="1weekBtn" value="12 weeks" onClick="setWeeks(12)" />
+				<input id="3months" class="button" type="button" name="1monthBtn" value="3 months" onClick="setMonths(3)" />
+				<p>Specific days/months until expiration:</p>
+				<input class="button" id="dataVal" name="dataVal" type="number" placeholder="45">
+				<input class="button" type="button" name="dataDayBtn" value="days" onClick="setFreeDays()" />
+				<input class="button" type="button" name="dataWeekBtn" value="weeks" onClick="setFreeWeeks()" />
+				<input class="button" type="button" name="dataMonthBtn" value="months" onClick="setFreeMonths()" />
+			</div>
+			<div id="result"></div>
+			&nbsp;
+			<hr>
+			<p>I have removed the menu as it is outdated. If anyone would like it updated, please email me at: <a href="mailto:me@imstormy.com?subject=Daydot Helper">me@imstormy.com</a></p>
+			</hr>
+		</center>
+		<center>
+			<hr>
+			<p>Maintained by <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy O'Connor.</p>
+			</hr>
+			<p>My Favourites:<br>Marine Point &#8226; Ellesmere Port DT</p>
+		</center>
+	</body>
 </html>
