--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		</center>
 		<center>
 			<hr>
-			<p>Maintained by <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy O'Connor.</p>
+			<p>Maintained by <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy O'Connor.</p></a>
 			</hr>
 			<p>My Favourites:<br>Marine Point <a class="byStormy" href="beta.html">&#8226;</a> Ellesmere Port DT</p>
 		</center>
