--- a/beta.html
+++ b/beta.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<center>
-			<h1>Daydot Helper</h1>
+			<h1>Daydot Helper Beta</h1>
 			<p>By <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy</a></p>
 			<hr>
 			<div>
