Working on beta changes
Added link to access beta page.

--- a/beta.html
+++ b/beta.html
@@ -52,9 +52,9 @@
 		</center>
 		<center>
 			<hr>
-			<p>Maintained by <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy O'Connor.</p>
+			<p>Maintained by <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy O'Connor.</a></p>
 			</hr>
-			<p>My Favourites:<br>Marine Point &#8226; Ellesmere Port DT</p>
+			<p>My Favourites:<br>Marine Point <a class="byStormy" href="index.html">&#8226;</a> Ellesmere Port DT</p>
 		</center>
 	</body>
 </html>
