--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<div id="result"></div>
 			&nbsp;
 			<hr>
-			<p>I have removed the menu as it is outdated. If anyone would like it updated, please email me at: <a href="mailto:me@imstormy.com?subject=Daydot Helper">me@imstormy.com</a></p>
+			<p>I have removed the menu as it is outdated. If anyone would like it updated, please email me the menu at: <a href="mailto:me@imstormy.com?subject=Daydot Helper">me@imstormy.com</a></p>
 			</hr>
 		</center>
 		<center>
