--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<hr>
 			<p>Maintained by <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy O'Connor.</a></p>
 			</hr>
-			<p>My Favourites:<br>Marine Point <a class="byStormy" href="beta.html">&#8226;</a> Ellesmere Port DT</p>
+			<p>My Favourites:<br>Marine Point <a class="byStormy" href="/stickers/stickers.html">&#8226;</a> Ellesmere Port DT</p>
 		</center>
 	</body>
 </html>
