--- a/stickers/stickers.html
+++ b/stickers/stickers.html
@@ -34,7 +34,8 @@
 
 	<button onclick="document.getElementById('replace-me').innerHTML = '14'">14</button>
 	<button onclick="document.getElementById('replace-me').innerHTML = '12'">12</button>
-	<button onclick="myfunction()">Test 2</button>
+	<button onclick="document.getElementById('imageBox').src='tuesday.png'">Tuesday</button>
+	<button onclick="document.getElementById('imageBox').src='monday.png'">Monday</button>
 	<!--dateVar + '.png'"-->
 	<div style="position:relative">
 		<img src="monday.png" style="display:none; position:absolute;"/>
@@ -45,6 +46,5 @@
 		<img src="saturday.png" style="display:none; position:absolute;"/>
 		<img src="sunday.png" style="display:none; position:absolute;"/>
 	</div>
-<input id="dataValue" type="number" placeholder="45">
 </body>
 </html>
