--- a/stickers/stickers.html
+++ b/stickers/stickers.html
@@ -34,8 +34,19 @@
 
 	<button onclick="document.getElementById('replace-me').innerHTML = '14'">14</button>
 	<button onclick="document.getElementById('replace-me').innerHTML = '12'">12</button>
+	<button onclick="document.getElementById('replace-me').innerHTML = '30'">30</button>
+	<button onclick="document.getElementById('replace-me').innerHTML = '26'">26</button>
+	<button onclick="document.getElementById('replace-me').innerHTML = '8'">8</button>
+	<button onclick="document.getElementById('replace-me').innerHTML = '5'">5</button>
+	<button onclick="document.getElementById('replace-me').innerHTML = '29'">29</button>
+	<button onclick="document.getElementById('replace-me').innerHTML = '7'">7</button>
 	<button onclick="document.getElementById('imageBox').src='tuesday.png'">Tuesday</button>
 	<button onclick="document.getElementById('imageBox').src='monday.png'">Monday</button>
+	<button onclick="document.getElementById('imageBox').src='wednesday.png'">Wednesday</button>
+	<button onclick="document.getElementById('imageBox').src='thursday.png'">Thursday</button>
+	<button onclick="document.getElementById('imageBox').src='friday.png'">Friday</button>
+	<button onclick="document.getElementById('imageBox').src='saturday.png'">Saturday</button>
+	<button onclick="document.getElementById('imageBox').src='sunday.png'">Sunday</button>
 	<!--dateVar + '.png'"-->
 	<div style="position:relative">
 		<img src="monday.png" style="display:none; position:absolute;"/>
