--- a/betas/betterpy/index.html
+++ b/betas/betterpy/index.html
@@ -19,7 +19,7 @@
 <body>
 	<center>
 		<h1>Daydot Helper</h1>
-		<p>By <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy</a></p>
+		<p>By <a class="byStormy" href="../../index.html">St&#243;rmy</a></p>
 		<hr>
 		<div>
 			<p>Start Date:</p>
@@ -54,7 +54,7 @@
 	<hr>
 	<p>Maintained by <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy O'Connor.</a></p>
 </hr>
-<p>My Favourites:<br>Marine Point <a class="byStormy" href="/stickers/stickers.html">&#8226;</a> Ellesmere Port DT</p>
+<p>My Favourites:<br>Marine Point <a class="byStormy" href="betas/betterpy/index.html">&#8226;</a> Ellesmere Port DT <a class="byStormy" href="betas/stickers/index.html">&#8226;</a> Liverpool Lime St</p>
 </center>
 </body>
 </html>
