--- a/index.html
+++ b/index.html
@@ -44,8 +44,214 @@
 		</div>
 		<div id="result"></div>
 		&nbsp;
-		<hr>
-		<p>I have removed the menu as it is outdated. If anyone would like it updated, please email me the menu at: <a href="mailto:me@imstormy.com?subject=Daydot Helper">me@imstormy.com</a></p>
+		    <hr>
+    <div id="myDIV">
+      <input class="button" type="text" id="myInput" placeholder="e.g. Mint Syrup" onkeyup="myFunction()">
+      <div class="tableFixHead">
+        <table id="myTable">
+          <thead>
+            <tr class="header">
+              <th style="width:60%;">Product</th>
+              <th>Day Dot</th>
+            </tr>
+          </thead>
+          <tr>
+            <td>Hot Chocolate Powder</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Frappe Powder</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Costa Syrups (Caramel/Vanilla/Hazelnut)</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Monin (SF) Sugar Free Syrups (Caramel/Vanilla/Hazelnut)</td>
+            <td>3 Months</td>
+          </tr>
+          <tr>
+            <td>White Chocolate Sauce</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Spiced Chai Syrup</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Salted Caramel Sauce</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Strawberry Sauce</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>(SF) Sugar Free Coconut Syrup</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Caramel Chocolate Flavour Sauce</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Mango Sauce</td>
+            <td>8 Weeks</td>
+          </tr>
+          <tr>
+            <td>Fuze Tea Syrup Bases</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Chocolate and Honey Flavour Sauce</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Orange Flavour Syrup</td>
+            <td>12 Weeks</td>
+          </tr>
+          <tr>
+            <td>Caramel Vermicelli</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Strawberry Sprinkles</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Gingerbread Person</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Golden Twinkle Sprinkle/Festive Twinkle</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Mango Juicy Pearls</td>
+            <td>2 Weeks</td>
+          </tr>
+          <tr>
+            <td>Fruit Cooler Bases</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Chocolate Flavoured Brownie Crumb</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Cappuccino Dusting</td>
+            <td>1 Month</td>
+          </tr>
+          <tr>
+            <td>Lemon Slices</td>
+            <td>4 Weeks</td>
+          </tr>
+          <tr>
+            <td>Flakes/Marshmallows</td>
+            <td>See box</td>
+          </tr>
+          <tr>
+            <td>All Fuze Teabags</td>
+            <td>3 Months</td>
+          </tr>
+          <tr>
+            <td>Adez Dairy Alternatives</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Whipped Cream (Canister)</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Whipped Cream (Open Bottle)</td>
+            <td>3 Days</td>
+          </tr>
+          <tr>
+            <td>Light Dairy Swirl (Canister)</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Vegan Fruited Teacake</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Muffins (Bluberry/Lemon)</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Seasonal Muffins (Chocolate Inspired by Toblerone/Terry's Chocolate Orange/Reindeer)</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Cinnamon Bun</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Pastal De Nata</td>
+            <td>24 Hours</td>
+          </tr>
+          <tr>
+            <td>Brown Seeded Bread/White Bread for Toast</td>
+            <td>3 Days (Day Dot should be added to plastic bag. Please Reseal bag between uses.</td>
+          </tr>
+          <tr>
+            <td>Raspberry Triple Loaf Cake</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Chocolate and Caramelised Biscuit Loaf Cake</td>
+            <td>4 Days</td>
+          </tr>
+          <tr>
+            <td>Loaded Chocolate and Hazelnut Cake</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>St Clement's Chocolate Drizzle Loaf Cake</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Millionaire Shortbread</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Raspberry and Almond Bake</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Chocolate Tiffin</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Bakewell Tart</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>All Butter Mince Pie</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Lemon Curd Tart</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Salted Caramel Brownie</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Vegan Rocky Road</td>
+            <td>5 Days</td>
+          </tr>
+          <tr>
+            <td>Crispy Festive Wreath</td>
+            <td>7 Days</td>
+          </tr>
+        </table>
+      </div>
+      <hr>
+    </div>
+		<p>The menu has been updated using the official in-store Day Dot Sheets (November 2022)</p>
 	</center>
 	<center>
 		<hr>
@@ -53,4 +259,5 @@
 		<p>My Favourites:<br>Marine Point <a class="byStormy" href="betas/betterpy/index.html">&#8226;</a> Ellesmere Port DT <a class="byStormy" href="betas/stickers/index.html">&#8226;</a> Liverpool Lime St</p>
 	</center>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.4.1/processing-api.min.js"></script>
 </html>
