--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <table id="myTable">
           <thead>
             <tr class="header">
-              <th style="width:60%;">Product</th>
-              <th>Day Dot</th>
+              <th>Product</th>
+              <th style="width:15%;">Day Dot</th>
             </tr>
           </thead>
           <tr>
