--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<div class="alert info">
-  		<span class="closebtn">×</span>  
+  		<span class="closebtn">&times;</span>
   		<strong>Current Campaign</strong><br>Mince Pies • Food Capture Rate (%) • Festive Drinks
 	</div>
 	<center>
