--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 		});
 		
 	</script>
+	<script>
+		var close = document.getElementsByClassName("closebtn");
+		var x;
+
+		for (x = 0; x < close.length; x++) {
+			close[x].onclick = function(){
+    				var div = this.parentElement;
+    				div.style.opacity = "0";
+    				setTimeout(function(){ div.style.display = "none"; }, 600);
+  			}
+		}
+	</script>
 </head>
 <body>
 	<div class="alert info">
