--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
             <td>24 Hours</td>
           </tr>
           <tr>
-            <td>Brown Seeded Bread/White Bread for Toast</td>
-            <td>3 Days (Day Dot should be added to plastic bag. Please Reseal bag between uses.</td>
+            <td>Brown Seeded Bread/White Bread for Toast (Day Dot should be added to plastic bag. Please Reseal bag between uses.)</td>
+            <td>3 Days</td>
           </tr>
           <tr>
             <td>Raspberry Triple Loaf Cake</td>
