--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <td>24 Hours</td>
           </tr>
           <tr>
-            <td>Brown Seeded Bread/White Bread for Toast (Day Dot should be added to plastic bag. Please Reseal bag between uses.)</td>
+            <td>Brown Seeded Bread/White Bread for Toast<br>(Day Dot should be added to plastic bag. Please Reseal bag between uses.)</td>
             <td>3 Days</td>
           </tr>
           <tr>
