--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		&nbsp;
 		    <hr>
     <div id="myDIV">
-      <input class="button" type="text" style="width:80%;" id="myInput" placeholder="e.g. Mint Syrup" onkeyup="myFunction()">
+      <input class="button" type="text" style="width:80%;" id="myInput" placeholder="e.g. Vanilla Syrup" onkeyup="myFunction()">
       <div class="tableFixHead">
         <table id="myTable">
           <thead>
