--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	</script>
 </head>
 <body>
-	<div class="alert info">
+	<!--<div class="alert info">
   		<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
   		<strong>Current Campaign</strong><br>Mince Pies • Food Capture Rate (%) • Festive Drinks
-	</div>
+	</div>-->
 	<center>
 		<h1>Daydot Helper</h1>
 		<p>By <a class="byStormy" href="mailto:me@imstormy.com?subject=Daydot Helper">St&#243;rmy</a></p>
